// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<Checkbox
  dataTest="Duck"
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      data-test="Duck"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`adds \`disabled\` attribute 1`] = `
<Checkbox
  isDisabled={true}
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "default",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={true}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#fafafa",
          "borderColor": "#e9eced",
          "color": "#d3d4d5",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "#d3d4d5",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`adds \`name\` attribute 1`] = `
<Checkbox
  name="ohhi"
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      name="ohhi"
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`adds \`value\` prop 1`] = `
<Checkbox
  onChange={[MockFunction]}
  value="Duck"
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
      value="Duck"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`applies \`labelPadding\` as padding on the label 1`] = `
<Checkbox
  labelPadding="10px 20px"
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "10px 20px",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`applies className corresponding to \`checkboxVerticalAlign\` on the label 1`] = `
<Checkbox
  checkboxVerticalAlign="top"
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignTop"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`if no \`children\` are passed in 1`] = `
<Checkbox
  id="no-children"
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      id="no-children"
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
  </label>
</Checkbox>
`;

exports[`is checked when \`isChecked\` is set to true 1`] = `
<Checkbox
  isChecked={true}
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#009fd9",
          "borderColor": "#009fd9",
          "color": "#ffffff",
        }
      }
    >
      <svg
        fill="currentColor"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.879"
          rx=".939"
          transform="rotate(123 15.232 4.003)"
          width="11.701"
          x="15.232"
          y="4.003"
        />
        <rect
          height="1.879"
          rx=".939"
          transform="rotate(-146 8.83 13.822)"
          width="7.337"
          x="8.83"
          y="13.822"
        />
        <path
          d="M8.072 13.306l1.03-1.586.787.512-1.03 1.586z"
        />
      </svg>
    </div>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`is not checked by default 1`] = `
<Checkbox
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders \`children\` passed in 1`] = `
<Checkbox
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders \`hasError\` state 1`] = `
<Checkbox
  hasError={true}
  isChecked={true}
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={true}
      checked={true}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ff5a5f",
          "color": "#ff5a5f",
        }
      }
    >
      <svg
        fill="currentColor"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.879"
          rx=".939"
          transform="rotate(123 15.232 4.003)"
          width="11.701"
          x="15.232"
          y="4.003"
        />
        <rect
          height="1.879"
          rx=".939"
          transform="rotate(-146 8.83 13.822)"
          width="7.337"
          x="8.83"
          y="13.822"
        />
        <path
          d="M8.072 13.306l1.03-1.586.787.512-1.03 1.586z"
        />
      </svg>
    </div>
    <span
      className="text"
      style={
        Object {
          "color": "#ff5a5f",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders \`hasError\` state 2`] = `
<Checkbox
  hasError={true}
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ff5a5f",
          "color": "#ff5a5f",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "#ff5a5f",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders \`input\` within \`label\` 1`] = `
<Checkbox
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders checkbox input 1`] = `
<Checkbox
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked={false}
      checked={false}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#d3d4d5",
          "color": "inherit",
        }
      }
    />
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;

exports[`renders indeterminate SVG when both \`isIndeterminate\` and \`isChecked\` are true  1`] = `
<Checkbox
  isChecked={true}
  isIndeterminate={true}
  onChange={[MockFunction]}
>
  <label
    className="root rootCheckboxVerticalAlignCenter"
    style={
      Object {
        "cursor": "pointer",
        "padding": "14px 0",
      }
    }
  >
    <input
      aria-checked="mixed"
      checked={true}
      className="input"
      disabled={false}
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <div
      className="checkboxImage"
      style={
        Object {
          "backgroundColor": "#009fd9",
          "borderColor": "#009fd9",
          "color": "#ffffff",
        }
      }
    >
      <svg
        fill="currentColor"
        height="2"
        viewBox="0 0 10 2"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="10"
          x="0"
          y="0"
        />
      </svg>
    </div>
    <span
      className="text"
      style={
        Object {
          "color": "inherit",
        }
      }
    >
      Goose
    </span>
  </label>
</Checkbox>
`;
